Update CrashDetectorFCMC.java, CrashDetectorFancyModLoader.java, CrashDetectorModLauncher.java, and 3 more files